dnl $Id$
dnl
dnl Minimalistic configure.in for TSRM.
dnl

AC_INIT(TSRM.c)
AM_INIT_AUTOMAKE(TSRM, 1.0)
AM_CONFIG_HEADER(tsrm_config.h)

sinclude(tsrm.m4)
	
TSRM_BASIC_CHECKS
	
AM_PROG_LIBTOOL
if test "$enable_debug" != "yes"; then
  AM_SET_LIBTOOL_VARIABLE([--silent])
fi

TSRM_PTHREAD

AC_DEFINE(ZTS,1,[ ])

AC_OUTPUT(Makefile)
