dnl $Id$
dnl
dnl Minimalistic configure.in for TSRM.
dnl

AC_INIT(TSRM.c)
AM_INIT_AUTOMAKE(TSRM, 1.0, nodefine)
AM_CONFIG_HEADER(tsrm_config.h)

AH_TOP([
#undef PTHREADS
])

sinclude(tsrm.m4)
	
TSRM_BASIC_CHECKS
TSRM_THREADS_CHECKS
	
AM_PROG_LIBTOOL
if test "$enable_debug" != "yes"; then
  AM_SET_LIBTOOL_VARIABLE([--silent])
fi

dnl TSRM_PTHREAD

AC_CHECK_HEADERS(
utime.h \
dirent.h \
stdarg.h \
alloca.h \
unistd.h \
limits.h
)

AC_OUTPUT(Makefile)
